# Wasm-Kalpixk_IA_DevOps

./: .env.example  .env.template  .gitignore  BENCHMARK.md  BENCHMARK_RESULTS.md  Cargo.toml  DEMO.md  Dockerfile  Dockerfile.node  EXECUTIVE_SUMMARY.md  MIGRATION_EXECUTION_GUIDE.md  Makefile  README.md  RELEASE_CHECKLIST.md  RUN_MIGRATION_NOW.sh  START_MIGRATION_HERE.md  WASM_COMPILE_TASK.md  benchmark_real.py  dashboard_log.txt  docker-compose.rocm.yml  fix_gpu_name.py  fix_security.py  fix_security_v2.py  fix_wasm_tests.py  fix_wasm_tests_v2.py  fix_wasm_tests_v3.py  fix_wasm_tests_v4.py  index.html  kalpixk.wit  kalpixk_monitor.py  kalpixk_real_features.py  main.py  migrate-to-wasp.sh  netlify.toml  playwright.config.ts  preview_log.txt  push_to_main.sh  requirements.txt  run_telegram_bot.py  sesion_amd.sh  (+4 more)
.github/workflows/: ci.yml  deploy-pages.yml
.jules/: WASM_COMPILE_TASK.md  bolt.md  ordnance_ops.md  sentinel.md
agents/kalpixk_threat_agent/: main.py  requirements.txt
assets/: index-CT-SbRSE.js  index-CV94eF-0.js  index-CYO5RRFT.js  index-Ch6x5jzO.js  index-D5AV-8Vy.js  index-DWxqfz6I.js  index-DheRtSlJ.js  index-e3TGEVgk.js  kalpixk_core_bg-8gKCVZfB.wasm  kalpixk_core_bg-CW38-0HD.wasm  kalpixk_core_bg-D6blFmud.wasm  kalpixk_core_bg-DlIabhEx.wasm  kalpixk_core_bg-MMc1YB6Q.wasm  kalpixk_core_bg-aOXCl17N.wasm
benchmarks/: benchmark_gpu.py  cpu_vs_mi300x.py
config/: llm_config.yaml
crates/kalpixk-core/: Cargo.toml  build.sh
crates/kalpixk-core/pkg/: kalpixk_core.d.ts  kalpixk_core.js  kalpixk_core_bg.wasm  kalpixk_core_bg.wasm.d.ts
crates/kalpixk-core/src/: defense_nodes.rs  entropy.rs  event.rs  features.rs  lib.rs  metrics.rs  motor.zig  parsers.rs  payloads.rs  retaliation.rs  runtime_features.rs  security.rs  severity.rs  wasp.rs  wast.rs
crates/kalpixk-core/tests/: offensive_tests.rs  wasm_tests.rs
crates/kalpixk-node/: Cargo.toml
crates/kalpixk-node/src/: main.rs
dashboard/: index.html
datasets/: generate_dataset.py
docs/: AMD_ACADEMY_TRACKER.md  ARQUITECTURA.md  CI_FIX_INSTRUCTIONS.md  GRADIENT_ADK_SETUP.md  GUIA_COMPLETA.md  MASTER_PLAN.md  PLAN_TAREAS.md  WASM_DEFENSE_NODES_v2.md  WASM_DEFENSE_PROTOCOLS.md  WASP_and_WAST_Integration.md  WORKFLOWS_TO_ADD.md
kynikos/: __init__.py  dashboard.py  orchestrator.py  providers.py  telegram_bot.py  whatsapp_bridge.py
models/: autoencoder.py  dataset_real.npz  evaluation_report.json  scaler.pkl
python/: pyproject.toml  train_baseline.py
python/api/: kalpixk_api.py
python/detection/: autoencoder.py  isolation_forest.py
python/models/: autoencoder.pt  ensemble.py  ensemble_kynikos.py  isolation_forest.pkl
python/tests/: test_api.py  test_full_pipeline.py
python/utils/: device_kynikos.py  metrics.py  wms_connector.py
sandbox/: Dockerfile.attacker  Dockerfile.defender  README.md  attacker.py  docker-compose.sandbox.yml  honeypot.py  sensor.py
scripts/: migrate-to-wasp.sh
skills/: benchmark.py  detect_now.py  generate_dataset.py  kalpixk_status.py  train_model.py
src/: BuildWasm.ps1  KalpixkOrchestrator.psm1  __init__.py
src/api/: main.py
src/channels/: __init__.py  telegram_bot.py  whatsapp_twilio.py
src/dashboard/: app.js  index.html
src/dashboard/pkg/: kalpixk_core.d.ts  kalpixk_core.js  kalpixk_core_bg.wasm.d.ts
src/detector/: __init__.py  anomaly_detector.py
src/monitor/: __init__.py  system_monitor.py
src/nodes/: orchestrator.py
src/retaliation/: atlatl.py
src/runtime/: __init__.py  dataset_generator.py  fallback.py  feature_extractor.py  wasm_loader.py  wasm_monitor.py
src/ui/: __init__.py  terminal_dashboard.py  theme.py
tests/: conftest.py  test_api_security.py  test_api_security_harden.py  test_atlatl_ordnance.py  test_atlatl_ordnance_v3.py  test_atlatl_ordnance_v4.py  test_atlatl_trigger.py  test_detector.py  test_interconnection.py  test_legacy_api_security.py  test_security_main.py  test_sentinel_harden_v3.py  test_sentinel_hardening.py  test_sentinel_rate_limits.py  test_sentinel_repro.py  verify_v4_visuals.spec.ts
tests/benchmark/: test_throughput_cpu.py
tests/e2e/: test_dashboard.spec.ts
tests/integration/: test_api.py  test_pipeline.py  test_wasm_pipeline.py
tests/security/: test_mitre.py
tests/unit/: test_detector.py  test_entropy.py  test_features.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
web/public/: coi-serviceworker.js
web/src/: App.tsx  main.js  main.ts  main.tsx
web/src/components/: AlertFeed.tsx
web/src/pages/: Dashboard.tsx
web/src/stores/: alertStore.ts  metricsStore.ts  wasmStore.ts
web/src/test/: wasm.test.ts
web/src/wasm/: index.ts  kalpixk-wasm.ts  kalpixk_core.d.ts  kalpixk_core.js  kalpixk_core_bg.wasm  kalpixk_core_bg.wasm.d.ts
web/src/wasm/pkg/: index.ts  kalpixk-wasm.ts  package.json
