[workspace]
resolver = "2"
members = [
    "crates/kalpixk-core"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Julián Juárez <julianjuarezmx01@gmail.com>"]
license = "MIT"

[workspace.dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = "0.4"
