[workspace]
members = ["crates/kalpixk-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Julián Juárez <julianjuarezmx01@gmail.com>"]
license = "MIT"
repository = "https://github.com/JULIANJUAREZMX01/Wasm-Kalpixk_IA_DevOps"

[workspace.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
chrono = "0.4"

