[project]
name = "kalpixk-ai"
version = "0.1.0"
description = "Kalpixk SIEM — AMD ROCm anomaly detection engine + KYNIKOS orchestrator"
authors = [{name = "Julián Juárez", email = "julianjuarezmx01@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "python-telegram-bot>=21.0.0",
    "groq>=0.4.0",
    "msgpack>=1.0.7",
    "websockets>=12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rocm = ["torch>=2.9.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["api", "models", "utils"]
