[project]
name = "kalpixk-backend"
version = "0.1.0"
description = "Kalpixk SIEM Backend — AMD ROCm anomaly detection engine"
authors = [{ name = "Julián Juárez", email = "julianjuarezmx01@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "torch>=2.4.0",        # PyTorch con ROCm — ver instalación en README
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0", # Fallback CPU para IsolationForest
    "httpx>=0.27.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "structlog>=24.0.0",
    "msgpack>=1.0.8",
]

[project.optional-dependencies]
rocm = [
    # cuML para Isolation Forest GPU (AMD)
    # Instalar manualmente: pip install cuml-cu12 --extra-index-url https://pypi.nvidia.com
    # Para AMD: usa el Docker oficial de ROCm con cuML preinstalado
]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["api", "models", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
