[package]
name = "kalpixk-core"
description = "WASM-native log parser and feature extractor for Blue Team SIEM"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib para WASM, rlib para tests

[dependencies]
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

# Solo disponible fuera de WASM (para CLI y tests)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_log = []  # Log a consola del browser
