[package]
name = "kalpixk-core"
description = "WASM-native log parser and feature extractor for Blue Team SIEM"
version = "0.1.0"
edition = "2021"
authors = ["Julián Juárez <julianjuarezmx01@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["wasmbind"] }

# Solo disponible fuera de WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
console_log = []
