[package]
name = "kalpixk-node"
version = "5.0.0"
edition = "2021"
authors = ["ATLATL-ORDNANCE <julianjuarezmx01@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
